[package]
name = "coroutine_switch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libc = "0.2"
nix = "0.22"
env_logger = { version = "0.8" }
gettime = { path = "../gettime" }
tokio = { version = "1", features = ["full"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
woke = "0.0.2"
# executor = { git = "https://github.com/rcore-os/executor" }
# futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }