[package]
name = "proc_switch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
numeric-enum-macro = "0.2"
nix = "0.22"
log = "0.4"
env_logger = { version = "0.8" }
gettime = { path = "../gettime" }